--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="content">
         <h1>MENES PHOTOS</h1>
-        <p>The most efficient photoshop.</p><br>
+        <p>The most efficient photoshop.</p>
      
     <br><tr>
         <td><img src="realback.jpng.jfif"  border=7 height=200 width=200></img></td>
