add new HTML+CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="camera.jpng.jfif" class="logo">
+            <img src="camera.jpng 2.0.JPG" class="logo">
             <div class="menu">
             <ul>
              <li><a href="#">Home</a></li>
