--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
              <li><a href="#">Contact</a></li>    
                 </ul>
     </div>
-    <div class="content">
-       <
-    <tr>
-        <td> <img src="girl4.jfif"></td>
-        <t><img src="girl1.jpeng.jfif"></td>
-        <td><img src="download.jpeng.jfif"></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-
- </tr>
-        </div>
- </table>   
+  
+    <div class="row">
+        <div class="column">
+          <img src="girl1.jpeng.jfif">
+          <img src="car 2.jfif">
+          <img src="download.jpeng.jfif">
+          <img src="girl4.jfif">
+          <img src="pic1.jpeg">
+          <img src="underwater2.jpng.jpg">
+          <img src="">
+          <img src="">
+          <img src="">
+          <img src="">
+          <img src="">
+          <img src="">
     
+</div>
+
 </body>
 </html> 
