--- a/index.html
+++ b/index.html
@@ -25,17 +25,11 @@
     <div class="row">
         <div class="column">
           <img src="girl1.jpeng.jfif">
-          <img src="car 2.jfif">
-          <img src="download.jpeng.jfif">
-          <img src="girl4.jfif">
           <img src="pic1.jpeg">
-          <img src="underwater2.jpng.jpg">
-          <img src="">
-          <img src="">
-          <img src="">
-          <img src="">
-          <img src="">
-          <img src="">
+          <img src="paris2.jpng.jpg">
+          <img src="download 2.jpng.jfif">
+          <img src="car 3.jfif">
+          
     
 </div>
 
