--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </ul>
     </div>
 
-        <div class="row">
-            <div class="column">
+        <div class="row" >
+            <div class column="column">
               <img src="girl1.jpeng.jfif">
               <img src="pic1.jpeg">
               <img src="paris2.jpng.jpg">
